refactor(#135): add list lookup service provider update open api and http code, adjust test cases
