# api/openapi/paths/non_admin/responses.yaml
@@ -41,6 +41,31 @@ components:
       required:
         - STEAK
 
+    LookupServiceProviderMetadata:
+      type: object
+      properties:
+        name:
+          type: string
+        shortDescription:
+          type: string
+        iconURL:
+          type: string
+          nullable: true
+        version:
+          type: string
+          nullable: true
+        informationURL:
+          type: string
+          nullable: true
+      required:
+        - name
+        - shortDescription
+
+    LookupServiceProvidersList:
+      type: object
+      additionalProperties:
+        $ref: "#/components/schemas/LookupServiceProviderMetadata"
+
   responses:
     SubmitTransactionResponse:
       description: |
@@ -49,3 +74,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
+    
+    LookupServiceProvidersListResponse:
+      description: |
+        A list of lookup service providers with their metadata.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/LookupServiceProvidersList'
